# wglymr

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  theme.ts
crates/: .gitignore  ARCHITECTURE.md  BUILD.md
crates/wglymr-app/: Cargo.toml  README.md
crates/wglymr-app/src/: lib.rs  visual_state.rs
crates/wglymr-app/src/engine/: mod.rs
crates/wglymr-app/src/ui/: provider.rs
crates/wglymr-frontend-web/: Cargo.toml  README.md
crates/wglymr-frontend-web/src/: lib.rs
crates/wglymr-frontend-web/src/wasm/: bindings.rs
crates/wglymr-node-editor/: Cargo.toml
crates/wglymr-node-editor/fonts/: roboto_msdf.json
crates/wglymr-node-editor/src/: lib.rs  prelude.rs
crates/wglymr-node-editor/src/document/: adapter.rs  commands.rs  descriptors.rs  mod.rs  test_adapter.rs
crates/wglymr-node-editor/src/editor/: culling.rs  depth.rs  hit_test.rs  input.rs  layout.rs  mod.rs  render_model.rs  renderer.rs  text_renderer_msdf_adapter.rs  view_state.rs  visual_state.rs  wgpu_renderer.rs
crates/wglymr-node-editor/src/editor/draw/: draw_item.rs  draw_layer.rs  emit.rs  entity_metadata.rs  mod.rs  wgpu_draw_backend.rs
crates/wglymr-node-editor/src/editor/hit/: hit_layer.rs  hit_test.rs  mod.rs
crates/wglymr-node-editor/src/editor/input/: dispatch.rs  event.rs  hit_test.rs  mod.rs  operator.rs  operator_stack.rs  state.rs
crates/wglymr-node-editor/src/editor/input/operators/: box_select.rs  link_drag.rs  node_drag.rs  node_select.rs
crates/wglymr-node-editor/src/editor/interaction/: map.rs  mod.rs  resolver.rs  target.rs
crates/wglymr-node-editor/src/editor/layout/: edge_layout.rs  mod.rs  node_layout.rs
crates/wglymr-node-editor/src/editor/text/: cache.rs  cosmic_engine.rs  cosmic_shaper.rs  integration.rs  layout.rs  mod.rs  model.rs  msdf_loader.rs  run.rs
crates/wglymr-node-editor/src/editor/ui/: node_ui.rs  provider.rs  socket_ui.rs
crates/wglymr-node-editor/src/engine/: mod.rs
crates/wglymr-node-editor/src/runtime/: api.rs  browser_render_loop.rs  errors.rs  gpu.rs  mod.rs  scheduler.rs  view_registry.rs
crates/wglymr-node-editor/src/runtime/commands/: dispatcher.rs
crates/wglymr-node-editor/src/wasm/: bindings.rs  mod.rs
crates/wglymr-node-editor/tests/: wgpu_renderer.rs
crates/wglymr-render-wgpu/: Cargo.toml  README.md  build.rs
crates/wglymr-render-wgpu/src/: buffers.rs  device.rs  execute.rs  lib.rs  pipeline.rs  primitives.rs  wgpu_draw_backend.rs
crates/wglymr-render-wgpu/src/batch/: mod.rs  primitive_batch.rs
crates/wglymr-render-wgpu/src/draw/: grid.rs  mod.rs
crates/wglymr-render-wgpu/src/gpu/: mod.rs  pipelines.rs  viewport.rs
crates/wglymr-render-wgpu/src/primitive/: batch.rs  grid.rs  mod.rs  pipelines.rs  renderer.rs
crates/wglymr-render-wgpu/src/renderer/: mod.rs  primitive_renderer.rs
crates/wglymr-render-wgpu/src/sdf/: batch.rs  mod.rs  pipeline.rs  renderer.rs  rounded_rect.rs
crates/wglymr-render-wgpu/src/shaders/: msdf.wgsl  primitive.wgsl  sdf.wgsl  sdf_text.wgsl  text.wgsl
crates/wglymr-render-wgpu/src/text/: atlas.rs  batch.rs  mod.rs  pipeline.rs  renderer.rs
crates/wglymr-render-wgpu/src/text/glyphon/: mod.rs  renderer.rs
crates/wglymr-render-wgpu/src/text/msdf/: atlas.rs  batch.rs  cache.rs  embedded.rs  font.rs  glyph.rs  mod.rs  msdfgen.rs  pipeline.rs  registry.rs  renderer.rs  vertex.rs
crates/wglymr-render-wgpu/src/text/sdf/: atlas.rs  batch.rs  mod.rs  pipeline.rs  rasterizer.rs  renderer.rs
crates/wglymr-runtime/: Cargo.toml  README.md
crates/wglymr-runtime/src/: lib.rs
crates/wglymr-runtime/src/runtime/: api.rs  browser_render_loop.rs  errors.rs  logging.rs  mod.rs  scheduler.rs  view_registry.rs
crates/wglymr-runtime/src/runtime/commands/: dispatcher.rs  mod.rs
frontend/: README.md  package-lock.json
(+192 files in other folders)
