[workspace]
resolver = "2"

members = [
    "crates/wglymr-core",
    "crates/wglymr-document",
    "crates/wglymr-interaction",
    "crates/wglymr-view",
    "crates/wglymr-render",
    "crates/wglymr-render-wgpu",
    "crates/wglymr-app",
    "crates/wglymr-runtime",
    "crates/wglymr-frontend-web",
    "crates/wglymr-color",
    "crates/wglymr-font-assets",
    "xtask",
]

default-members = ["crates/wglymr-app"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/krispy-snacc/wglymr"
