[package]
name = "wglymr-frontend-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wglymr-runtime = { path = "../wglymr-runtime" }
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = "25.0"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
