[package]
name = "wglymr-node-editor"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wgpu = "27.0"
wglymr-render-wgpu = { path = "../wglymr-render-wgpu" }
wglymr-color = { path = "../wglymr-color" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cosmic-text = "0.13"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
] }
