[package]
name = "wglymr-render-wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "25.0"
wglymr-color = { path = "../wglymr-color" }
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
