[package]
name = "wglymr-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wglymr-document = { path = "../wglymr-document" }
wglymr-view = { path = "../wglymr-view" }
wglymr-interaction = { path = "../wglymr-interaction" }
wglymr-app = { path = "../wglymr-app" }
wglymr-render-wgpu = { path = "../wglymr-render-wgpu" }
serde = { version = "1.0", features = ["derive"] }
wgpu = "25.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Document"] }
